# game-of-life

./: .gitignore  Cargo.toml  README.MD
config/: display.ron
src/: main.rs  states.rs  systems.rs
